k8s/lob/member-v2/overlays/dash-test2/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: member-v2-ingress
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: test2-subdomain.domain.com
spec:
  rules:
    - host: test2-subdomain.domain.com # just testing garbage for the overlay
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: member-v2
                port:
                  number: 80
